# Neural-Training-Observatory

./: README.md  pyproject.toml
sandbox/: nto_core_test.py  observatory_test.duckdb  test_mnist.py
scripts/: model.pth  observatory_test.duckdb  training_mnist.py
scripts/wandb/: latest-run
scripts/wandb/run-20260421_113318-pfx9ouha/: run-pfx9ouha.wandb
scripts/wandb/run-20260421_113640-l1e0f31z/: run-l1e0f31z.wandb
scripts/wandb/run-20260421_113900-xkgp86ph/: run-xkgp86ph.wandb
scripts/wandb/run-20260421_114555-31bdbtk2/: run-31bdbtk2.wandb
scripts/wandb/run-20260421_115045-su8beyez/: run-su8beyez.wandb
scripts/wandb/run-20260421_115157-grlbycxi/: run-grlbycxi.wandb
scripts/wandb/run-20260421_115518-8ulkkeqb/: run-8ulkkeqb.wandb
scripts/wandb/run-20260421_115624-aaiekxfx/: run-aaiekxfx.wandb
scripts/wandb/run-20260421_115723-sowqlvhf/: run-sowqlvhf.wandb
scripts/wandb/run-20260421_123520-y5ysigjc/: run-y5ysigjc.wandb
scripts/wandb/run-20260421_125303-k6ump0oa/: run-k6ump0oa.wandb
scripts/wandb/run-20260421_125343-tlw5h5vf/: run-tlw5h5vf.wandb
scripts/wandb/run-20260421_125437-g5vxud5w/: run-g5vxud5w.wandb
scripts/wandb/run-20260421_125529-af6czrad/: run-af6czrad.wandb
scripts/wandb/run-20260421_125556-vxe1dml5/: run-vxe1dml5.wandb
scripts/wandb/run-20260421_125751-oczlpqc7/: run-oczlpqc7.wandb
scripts/wandb/run-20260421_125910-hic29hxc/: run-hic29hxc.wandb
scripts/wandb/run-20260422_142859-x97zqogi/: run-x97zqogi.wandb
src/neutrobs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/neutrobs/utils/: datatypes.py  (+5 more)
(+114 files in other folders)
